requsiçoes doc api finalizada
