# public/api-doc/swagger.json
@@ -100,22 +100,53 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "properties": {
-                                        "id": {
-                                            "type": "integer",
-                                            "format": "int64",
-                                            "example": 1
+                                    "type": "array",
+                                    "items": {
+                                        "properties": {
+                                            "id": {
+                                                "type": "integer",
+                                                "format": "int64",
+                                                "example": 1
+                                            },
+                                            "name": {
+                                                "type": "string",
+                                                "example": "Roberto Anderson Carrara"
+                                            },
+                                            "email": {
+                                                "type": "string",
+                                                "example": "hgil@example.org"
+                                            },
+                                            "active": {
+                                                "type": "boolean",
+                                                "example": true
+                                            },
+                                            "email_verified_at": {
+                                                "type": "string",
+                                                "format": "date-time",
+                                                "example": "2023-10-09T14:49:29.000000Z"
+                                            },
+                                            "created_at": {
+                                                "type": "string",
+                                                "format": "date-time",
+                                                "example": "2023-10-09T14:49:29.000000Z"
+                                            },
+                                            "updated_at": {
+                                                "type": "string",
+                                                "format": "date-time",
+                                                "example": "2023-10-09T14:49:29.000000Z"
+                                            },
+                                            "two_factor_confirmed_at": {
+                                                "type": "string",
+                                                "format": "date-time",
+                                                "example": null
+                                            },
+                                            "two_factor_is_active": {
+                                                "type": "boolean",
+                                                "example": false
+                                            }
                                         },
-                                        "nome": {
-                                            "type": "string",
-                                            "example": "Exemplo 1"
-                                        },
-                                        "outraPropriedade": {
-                                            "type": "string",
-                                            "example": "Outro valor"
-                                        }
-                                    },
-                                    "type": "object"
+                                        "type": "object"
+                                    }
                                 }
                             }
                         }
@@ -154,22 +185,62 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "properties": {
-                                        "id": {
-                                            "type": "integer",
-                                            "format": "int64",
-                                            "example": 1
+                                    "type": "array",
+                                    "items": {
+                                        "properties": {
+                                            "id": {
+                                                "type": "integer",
+                                                "format": "int64",
+                                                "example": 2
+                                            },
+                                            "admin_creator_id": {
+                                                "type": "integer",
+                                                "format": "int64",
+                                                "example": 1
+                                            },
+                                            "type": {
+                                                "type": "string",
+                                                "example": "common"
+                                            },
+                                            "name": {
+                                                "type": "string",
+                                                "example": "Roberto Anderson Carrara"
+                                            },
+                                            "email": {
+                                                "type": "string",
+                                                "example": "hgil@example.org"
+                                            },
+                                            "active": {
+                                                "type": "boolean",
+                                                "example": true
+                                            },
+                                            "email_verified_at": {
+                                                "type": "string",
+                                                "format": "date-time",
+                                                "example": "2023-10-09T14:49:29.000000Z"
+                                            },
+                                            "created_at": {
+                                                "type": "string",
+                                                "format": "date-time",
+                                                "example": "2023-10-09T14:49:29.000000Z"
+                                            },
+                                            "updated_at": {
+                                                "type": "string",
+                                                "format": "date-time",
+                                                "example": "2023-10-09T14:49:29.000000Z"
+                                            },
+                                            "two_factor_confirmed_at": {
+                                                "type": "string",
+                                                "format": "date-time",
+                                                "example": null
+                                            },
+                                            "two_factor_is_active": {
+                                                "type": "boolean",
+                                                "example": false
+                                            }
                                         },
-                                        "nome": {
-                                            "type": "string",
-                                            "example": "Exemplo 1"
-                                        },
-                                        "outraPropriedade": {
-                                            "type": "string",
-                                            "example": "Outro valor"
-                                        }
-                                    },
-                                    "type": "object"
+                                        "type": "object"
+                                    }
                                 }
                             }
                         }
